// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer should render correctly for amp 1`] = `
<html>
  <head>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"","description":"","duration":"","thumbnailUrl":"","datePublished":"1970-01-01T00:00:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_brand_tv/id/ps/amp?morph_env=live"}
    </script>
  </head>
  <body>
    .c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_brand_tv/id/ps/amp?morph_env=live"
            title="ویډیو پلیئر"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="https://ichef.bbci.co.uk/images/ic/1024x576/p063j1dv.jpg"
              width="9"
            />
            <noscript />
          </amp-iframe>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`VideoPlayer should render correctly for canonical 1`] = `
.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c0 {
  width: calc(100% + 1rem);
  margin: 0 -0.5rem;
}

.c2 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (min-width:25rem) {
  .c0 {
    width: calc(100% + 2rem);
    margin: 0 -1rem;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"","description":"","duration":"","thumbnailUrl":"","datePublished":"1970-01-01T00:00:00.000Z","embedURL":"https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_brand_tv/id/ps?morph_env=live"}
    </script>
  </head>
  <body>
    <div>
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="c2"
            scrolling="no"
            src="https://polling.test.bbc.co.uk/ws/av-embeds/media/pashto/bbc_brand_tv/id/ps?morph_env=live"
            title="ویډیو پلیئر"
          />
          <noscript />
        </div>
      </div>
    </div>
  </body>
</html>
`;
